[package]
name = "civsim-world"
description = "Abiotic spatial operators and resident geology state for the Emergent Civilization Simulator."
authors.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
civsim-core = { path = "../core" }
# The shared per-column GeodynamicColumn contract. World owns the sparse resident
# field while physics owns the abiotic quantities passed across that boundary.
civsim-physics = { path = "../physics" }

[lints.clippy]
# R-CANON-WALK: no unordered containers in canonical state (see clippy.toml).
disallowed_types = "deny"
