[package]
name = "civsim-compose"
description = "The emergent technology-composition evaluator (design Part 41): the fixed-Rust, memoised, interval-valued fold that measures a composed design against the authored physics substrate. It sits in its own crate OUTSIDE crates/physics on purpose (Principle 9): physics is the one authored side, composition is the emergent side, and the boundary is a crate boundary so the authored-physics hand cannot reach across it. The kernel path takes only Fixed and never a material or race id; the interface-axis and whole-system-proxy memberships are open data registries, so a people's exotic axis yields a different technology library under one physics."
authors.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# The determinism bedrock: Fixed (Q32.32) and the StateHasher the content address folds over.
civsim-core = { path = "../../../crates/core", features = ["legacy-domains"] }
# The authored physics-and-materials substrate the leaf evaluator reads (Substance vectors, the
# QuantityAxis catalogue the interface axes bind to, and the law kernels the dispatch runs). compose
# depends on physics; nothing in physics depends on compose, so the authored side never learns of the
# emergent side.
civsim-physics = { package = "civsim-physics-legacy", path = "../physics" }

[lints.clippy]
# R-CANON-WALK: the evaluator's node store, memo, and registries are all BTreeMap-backed so the fold
# order (and thus the content address and the memoised result) is deterministic; deny the unordered
# containers as the canonical crates do.
disallowed_types = "deny"
